# cuda-dolfinx

./: README.md
cpp/: CMakeLists.txt
cpp/cmake/post-install/: CMakeLists.txt
cpp/cmake/templates/: CUDOLFINXConfig.cmake.in  cudolfinx.conf.in  cudolfinx.pc.in
cpp/cudolfinx/: CMakeLists.txt  cudolfinx.h
cpp/cudolfinx/common/: CMakeLists.txt  CUDA.cpp  CUDA.h  CUDAStore.h  version.h.in
cpp/cudolfinx/fem/: CMakeLists.txt  CUDAAssembler.cpp  CUDAAssembler.h  CUDACoefficient.h  CUDADirichletBC.cpp  CUDADirichletBC.h  CUDADofMap.cpp  CUDADofMap.h  CUDAForm.h  CUDAFormCoefficients.cpp  CUDAFormCoefficients.h  CUDAFormConstants.cpp  CUDAFormConstants.h  CUDAFormIntegral.cpp  CUDAFormIntegral.h  CUDAInterpolate.cu  CUDAInterpolate.h  petsc.h  utils.h
cpp/cudolfinx/la/: CMakeLists.txt  CUDAMatrix.cpp  CUDAMatrix.h  CUDASeqMatrix.cpp  CUDASeqMatrix.h  CUDAVector.cpp  CUDAVector.h  petsc.cpp  petsc.h
cpp/cudolfinx/mesh/: CMakeLists.txt  CUDAMesh.cpp  CUDAMesh.h  CUDAMeshEntities.cpp  CUDAMeshEntities.h  util.cpp  util.h
cpp/test/: CMakeLists.txt  interpolate_same_map.cpp  interpolate_same_map_vector.cpp
docker/: Dockerfile.end-user  Dockerfile.test-env
python/: CMakeLists.txt  README.md  pyproject.toml
python/cudolfinx/: __init__.py  assemble.py  bcs.py  coefficient.py  context.py  cuda.py  form.py  jit.py  la.py  mesh.py
python/cudolfinx/wrappers/: caster_petsc.h  coefficient.cpp  cudolfinx.cpp  fem.cpp  petsc.cpp
python/doc/source/: api.rst  conf.py  index.rst  installation.rst
python/examples/: interpolate_same_map.py  interpolate_same_map_vector.py  poisson.py  poisson_sum_factorization.py
python/test/: test_cuda_assembly.py  test_multigpu_assembly.py
spack/: repo.yaml
